Remove every reference to Torque and SGE schedulers
* TorqueCommands in tests/common/schedulers_common has been preserved
  because in test_slurm we're testing torque wrappers for slurm.
* Remove ASG related methods and utilities
* Remove unused SQS and ASG policies
* Remove nodewatcher, jobwatcher, sqswatcher references
* Remove dynamodb:ListTables policy

Cherry pick of:
https://github.com/aws/aws-parallelcluster/pull/2613/commits/8a67a7fa16bb54c99736e0ae6bcfba809e4753b5

with some conflicts:
CHANGELOG.md	Modified	Modified
cli/src/pcluster/templates/cluster_stack.py	Deleted	Modified
tests/integration-tests/configs/develop.yaml	Modified	Modified
tests/integration-tests/tests/common/scaling_common.py	Modified	Modified
tests/integration-tests/tests/cfn-init/test_cfn_init.py	Modified	Modified
cli/tests/pcluster/templates/test_cw_dashboard_builder.py	Deleted	Modified
tests/integration-tests/tests/dcv/test_dcv.py	Modified	Modified
tests/integration-tests/tests/runtime_bake/test_runtime_bake.py	Modified	Modified
tests/integration-tests/tests/spot/test_spot.py	Modified	Modified

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/README
+++ b/cli/README
@@ -1,7 +1,7 @@
 AWS ParallelCluster is an AWS supported Open Source cluster management tool that makes it easy for you to deploy and
 manage High Performance Computing (HPC) clusters in the AWS cloud.
 Built on the Open Source CfnCluster project, AWS ParallelCluster enables you to quickly build an HPC compute environment in AWS.
-It automatically sets up the required compute resources and a shared filesystem and offers a variety of batch schedulers such as AWS Batch, SGE, Torque, and Slurm.
+It automatically sets up the required compute resources and a shared filesystem and offers a variety of batch schedulers such as AWS Batch and Slurm.
 AWS ParallelCluster facilitates both quick start proof of concepts (POCs) and production deployments.
 You can build higher level workflows, such as a Genomics portal that automates the entire DNA sequencing workflow, on top of AWS ParallelCluster.
 
